:bug: Display results on page on mobile

--- a/docs/themes/avocadocs/static/styles/search.css
+++ b/docs/themes/avocadocs/static/styles/search.css
@@ -99,6 +99,7 @@
   max-height: 50vh;
   overflow-y: scroll;
   margin-bottom: 1rem;
+  z-index: 1;
 }
 
 .search-page-results {
